
        CHANGES IN spatstat.explore VERSION 3.3-1.003

OVERVIEW

    o Tweaks to documentation.

    o Internal repairs.

        CHANGES IN spatstat.explore VERSION 3.3-1

OVERVIEW

    o Internal changes to satisfy package checker.
    
    
        CHANGES IN spatstat.explore VERSION 3.3-0

OVERVIEW

    o 'spatstat.explore' now depends on package 'spatstat.univar'.

    o Some functions have been moved to 'spatstat.univar'.
    
    o Minor improvements.

PACKAGE DEPENDENCE

    o spatstat.explore now depends on the new package 'spatstat.univar'

    o Some functions have been moved
    from 'spatstat.explore' to 'spatstat.univar'.

SIGNIFICANT USER-VISIBLE CHANGES

    o cbind.fv, bind.fv
    Additional arguments may be functions in the R language.

DELETED FUNCTIONS

    o bw.abram
    The generic 'bw.abram' has been moved
    to the new package 'spatstat.univar'.
    
    o CDF, CDF.density
    The generic 'CDF' and method 'CDF.density' have been moved
    to the new package 'spatstat.univar'.

    o densityAdaptiveKernel
    The generic 'densityAdaptiveKernel' has been moved
    to the new package 'spatstat.univar'.
    
    o dkernel, pkernel, qkernel, rkernel
    These functions have been moved to the new package 'spatstat.univar'.

    o kernel.factor, kernel.moment, kernel.squint
    These functions have been moved to the new package 'spatstat.univar'.

    o kaplan.meier, reduced.sample, km.rs
    These functions have been moved to the new package 'spatstat.univar'.

    o quantile.density
    This method has been moved to the new package 'spatstat.univar'.

    o stieltjes
    This function has been moved to the new package 'spatstat.univar'.

        CHANGES IN spatstat.explore VERSION 3.2-7

OVERVIEW

    o Bug fixes.

    o Internal improvements.

BUG FIXES

    o SpatialMedian.ppp, SpatialQuantile.ppp
    Argument `sigma' was ignored in some calculations.
    Fixed.


        CHANGES IN spatstat.explore VERSION 3.2-6

OVERVIEW
