@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.3-1.003
-Date: 2024-08-04
+Version: 3.3-2
+Date: 2024-08-20
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -57,9 +57,9 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Hangsheng", "Wang",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 3.0-4), spatstat.univar (>= 3.0-0), spatstat.geom (>= 3.3-0), spatstat.random (>= 3.3-0), stats, graphics, grDevices, utils, methods, nlme
-Imports: spatstat.utils (>= 3.0-5), spatstat.sparse (>= 3.1-0), goftest (>= 1.2-2), Matrix, abind
-Suggests: sm, gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.1-5), spatstat.model (>= 3.2-11), spatstat (>= 3.0-8)
+Depends: R (>= 3.5.0), spatstat.data (>= 3.1-2), spatstat.univar (>= 3.0-0), spatstat.geom (>= 3.3-2), spatstat.random (>= 3.3-1), stats, graphics, grDevices, utils, methods, nlme
+Imports: spatstat.utils (>= 3.1-0), spatstat.sparse (>= 3.1-0), goftest (>= 1.2-2), Matrix, abind
+Suggests: sm, gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.2-1), spatstat.model (>= 3.3-1), spatstat (>= 3.1-1)
 Description: Functionality for exploratory data analysis and nonparametric analysis of
 	     spatial data, mainly spatial point patterns,
 	     in the 'spatstat' family of packages.
