@@ -11,4 +11,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-03-21" "3.2-7" 241 535 0 32149 6365
 "2024-07-09" "3.3-1" 230 517 0 31571 6365
 
-"2024-08-04" "3.3-1.003" 230 517 0 31571 6365
+"2024-08-20" "3.3-2" 230 517 0 31571 6364
