@@ -1,11 +1,13 @@
 
-        CHANGES IN spatstat.explore VERSION 3.3-1.003
+        CHANGES IN spatstat.explore VERSION 3.3-2
 
 OVERVIEW
 
     o Tweaks to documentation.
 
     o Internal repairs.
+
+    o Internal changes to satisfy package checker.
 
         CHANGES IN spatstat.explore VERSION 3.3-1
 
